footer dark mode switch update; Panera blockquote fix

--- a/assets/css/_scss/_footer.scss
+++ b/assets/css/_scss/_footer.scss
@@ -47,9 +47,8 @@ footer {
           margin: 0;
           color: $green;
           span {
-            svg {
-              height: 1.25rem;
-            }
+            width: 1.25rem;
+            height: 1.25rem;
           }
           input[type="checkbox"] {
             position: relative;
